--- a/Experimentation/Untitled.ipynb
+++ b/Experimentation/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "1b928b14",
    "metadata": {},
    "outputs": [],
@@ -13,10 +13,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "97c75e67",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<cadquery.sketch.Sketch at 0x22ee032e880>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "\n",
     "result = (\n",
@@ -30,16 +40,47 @@
     "    .reset()\n",
     "    .rarray(0.6, 1, 5, 1)\n",
     "    .slot(1.5, 0.4, mode=\"s\", angle=90)\n",
-    ")"
+    ")\n",
+    "display(result)"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "35316a0a",
+   "metadata": {},
+   "source": [
+    "res = cq.Workplane(\"XY\")\n",
+    "\"hey\"._"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "063c018c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"hello\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "301bc8f4",
+   "id": "efdd36b4",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from pprint import pprint\n",
+    "\"hei\"."
+   ]
   }
  ],
  "metadata": {
